[package]
name = "qiniu-sdk"
version = "0.0.1"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2021"
rust-version = "1.60.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bachue/rust-sdk-cxx-bindings.git"
homepage = "https://www.qiniu.com"
description = "Qiniu Rust SDK Bindings to C++"
keywords = ["qiniu", "storage", "c++", "cxx", "cpp"]

[lib]
name = "qiniu_sdk"
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
qiniu-credential = "0.1.3"

[build-dependencies]
cxx-build = "1.0"
