[package]
name = "qiniu-sdk"
version = "0.0.1"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2021"
rust-version = "1.60.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bachue/rust-sdk-cxx-bindings.git"
homepage = "https://www.qiniu.com"
description = "Qiniu Rust SDK Bindings to C++"
keywords = ["qiniu", "storage", "c++", "cxx", "cpp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qiniu_sdk"
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
qiniu-sdk = { version = "0.2.1", path = "rust-sdk/sdk", default-features = false, features = ["utils", "etag", "credential", "upload-token", "http", "http-client", "objects", "upload", "download", "isahc", "trust_dns", "async"] }

[build-dependencies]
cxx-build = "1.0"
